@@ -43,6 +43,14 @@ $labels['filterregex'] = 'matches regular expression';
 $labels['filternotregex'] = 'not matches regular expression';
 $labels['filterunder'] = 'under';
 $labels['filterover'] = 'over';
+$labels['mime'] = 'MIME:';
+$labels['mimepart'] = 'MIME part:';
+$labels['mime-message'] = 'message';
+$labels['mime-anychild'] = 'any';
+$labels['mime-type'] = 'type';
+$labels['mime-subtype'] = 'subtype';
+$labels['mime-contenttype'] = 'content-type';
+$labels['mime-param'] = 'parameter';
 $labels['addrule'] = 'Add rule';
 $labels['delrule'] = 'Delete rule';
 $labels['messagemoveto'] = 'Move message to';
